# jig

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  example_config.toml
.cargo/: config.toml
.github/: dependabot.yml  release-notes.md
.github/workflows/: integration.yml  release-rs.yml  release.yml  test-rs.yml
jig-cli/: Cargo.toml
jig-cli/src/: config.rs  interactivity.rs  main.rs  repo.rs
jig-cli/src/commands/: assign.rs  branch.rs  comment.rs  hooks.rs  init_config.rs  mod.rs  open.rs  print_configs.rs  query.rs  search.rs  shared.rs  transition.rs  upgrade.rs  worklog.rs
jig-cli/src/hooks/: commit_msg.rs  lib.rs  mod.rs
jig-cli/src/interactivity/: filter.rs  mod.rs
jira/: Cargo.toml
jira/src/: client.rs  lib.rs  types.rs
scripts/: weekly_worklogs.sh
src/: config.rs  interactivity.rs  jira.rs  main.rs  repo.rs
src/commands/: assign.rs  branch.rs  comment.rs  completion.rs  create.rs  hooks.rs  init_config.rs  mod.rs  open.rs  print_configs.rs  query.rs  shared.rs  transition.rs  upgrade.rs  worklog.rs
src/hooks/: commit_msg.rs  lib.rs  mod.rs
src/jira/: client.rs  types.rs
