[package]
name = "jig"
version = "0.8.1"
edition = "2024"
authors = ["Steffen Baarsgaard <sbaarsgaard@gmail.com>"]
repository = "https://github.com/baarsgaard/jig"

[dependencies]
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
clap = { version = "4.5.53", default-features = false, features = [
  "help",
  "std",
  "color",
  "derive",
  "usage",
] }
clap_complete = "4.5.65"
color-eyre = { version = "0.6.5", default-features = false }
etcetera = "0.11.0"
gix = { version = "0.75.0", default-features = false }
inquire = { version = "0.9.2", features = ["date"] }
jira = { version = "0.6.1", package = "jira-issue-api" }
regex = { version = "1.12.2", features = ["std"], default-features = false }
self_update = { version = "0.42.0", default-features = false, features = [
  "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
url = { version = "2.5.4", default-features = false }
