[package]
name = "jig"
version = "0.9.0"
edition = "2024"
authors = ["Steffen Baarsgaard <sbaarsgaard@gmail.com>"]
repository = "https://github.com/baarsgaard/jig"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.5.60", default-features = false, features = [
  "help",
  "std",
  "color",
  "derive",
  "usage",
] }
clap_complete = "4.6.0"
color-eyre = { version = "0.6.5", default-features = false }
etcetera = "0.11.0"
gix = { version = "0.82.0", default-features = false, features = ["sha1", "sha256"] }
inquire = { version = "0.9.4", features = ["date"] }
jira = { version = "0.6.2", package = "jira-issue-api" }
regex = { version = "1.12.3", features = ["std"], default-features = false }
self_update = { version = "0.44.0", default-features = false, features = ["reqwest", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
url = { version = "2.5.4", default-features = false }
