[package]
name = "jig"
version = "0.2.0"
edition = "2021"
authors = ["Steffen Baarsgaard <sbaarsgaard@gmail.com>"]

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock"]}
clap = { version = "4.3.0", default-features = false, features = ["help", "std", "color", "derive"] }
color-eyre = { workspace = true }
etcetera = "0.8.0"
fuzzy-matcher = { version = "0.3.7", optional = true }
gix = { version = "0.48.0", default-features = false }
inquire = { version = "0.6.2", features = ["date"] }
jira = { path = "../jira", default-features = false }
regex = { workspace = true }
self_update = { version = "0.37.0", default-features = false, features = ["rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.7.5"
url = { version = "2.4.0", default-features = false }

[features]
default = []
server = [] # simplifies GH releases
cloud = ["jira/cloud"]
fuzzy = ["cloud", "dep:fuzzy-matcher"]
