[package]
name = "jira"
version = "0.1.0"
edition = "2021"
authors = ["Steffen Baarsgaard <sbaarsgaard@gmail.com>"]

[dependencies]
base64 = "0.21.2"
color-eyre = { workspace = true }
regex = { workspace = true }
reqwest = { version = "0.11.20", default-features = false, features = ["json", "blocking", "rustls-tls", "rustls-native-certs", "rustls-tls-native-roots"] }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
cloud = []
